# ai-to-token

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
.github/workflows/: ruff-pytest.yml
backend/src/: main.py
backend/src/core/: utils.py
backend/src/routes/v1/: base_routes.py
backend/src/schemas/v1/: auth_schemas.py
backend/src/static/css/: home.css
backend/src/static/js/: web3.js
backend/src/templates/: auth.html  header.html  home.html
client/: package-lock.json  package.json  vite.config.js
client/static/css/: fonts.css
client/static/js/: index.js  mint-nft.js  mint_nft.js  web3.js
client/templates/: auth.html  header.html  image.html  index.html
frontend/: package-lock.json  package.json
frontend/static/css/: home.css
frontend/static/js/: web3.js
provisory_json/: 11.json
server/: pyproject.toml  requirements-dev.txt  requirements.txt
server/requirements/: requirements-dev.txt
server/src/: config.py  exceptions.py  main.py
server/src/core/: utils.py
server/src/routes/: base_routes.py
server/src/routes/v1/: base_routes.py  img_from_ai_routes.py  img_generation_routes.py  index_routes.py  users_routes.py
server/src/schemas/v1/: auth_schemas.py  schemas.py
server/src/services/v1/: auth_service.py  images_service.py
server/src/tests/: conftest.py  test_health_check_route.py
server/src/tests/unit/: test_health_check_route.py  test_v1_img_generation_routes.py
server/src/tests/unit/routes/: test_v1_img_generation_routes.py  test_v1_index_routes.py
server/src/tests/unit/services/: test_v1_images_service.py
server/tests/: conftest.py
server/tests/unit/routes/: test_health_check_route.py  test_v1_img_generation_routes.py
server/tests/unit/services/: test_v1_images_service.py
smart_contracts/: AiToNft.sol  aiToNft.json
smart_contracts/provisory_json/: 11.json
src/: main.py  settings.py
src/core/: logger.py
src/routes/v1/: auth_routes.py  base_routes.py  home_routes.py  img_generation.py  img_generation_routes.py
src/services/v1/: auth_service.py  images_service.py
src/static/: web3.js
src/static/css/: fonts.css  home.css
src/static/js/: home.js  web3.js
src/templates/: header.html  home.html  image.html
static/: home.js  web3.js
templates/: auth.html  home.html  image.html
